--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity" >
+                tools:context=".MainActivity"
+                android:background="@drawable/background2">
     <EditText
         android:id="@+id/txt_start_date"
         android:layout_width="wrap_content"
