--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,17 @@
         android:layout_alignParentStart="true"
         android:focusable="false"/>
 
+    <EditText
+        android:id="@+id/reciever_mail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:hint="Enter your email"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:focusable="false"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
