--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,14 +33,14 @@
 
     <EditText
         android:id="@+id/reciever_mail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:hint="Enter your email"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:focusable="false"/>
+        android:focusable="false"
+        android:layout_marginTop="31dp"
+        android:layout_below="@+id/end_date_button"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="match_parent"
