--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity"
-                android:background="@drawable/background2">
+                android:background="@drawable/bg19">
     <EditText
         android:id="@+id/txt_start_date"
         android:layout_width="fill_parent"
@@ -104,6 +104,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="148dp"
         android:textAlignment="center"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/busify_mini"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_marginBottom="69dp"/>
 
 
 </RelativeLayout>
