--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:focusable="false"/>
 
     <EditText
-        android:id="@+id/reciever_mail"
+        android:id="@+id/receiver_mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
