makes keyboard close when enter is pressed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:hint="Enter your email"
+        android:singleLine="true"
+        android:hint="Enter email of recipient"
+        android:imeOptions="actionDone"
         android:focusable="true"
         android:layout_marginTop="31dp"
         android:layout_below="@+id/end_date_button"
