--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,20 +55,6 @@
         android:layout_alignParentStart="false"/>
 
     <EditText
-        android:id="@+id/txt_end_date"
-        android:layout_width="fill_parent"
-        android:layout_height="54dp"
-        android:textSize="20sp"
-        android:hint="xx-xx-xxxx"
-        android:focusable="false"
-        android:background="@drawable/button1"
-        android:textAlignment="center"
-        android:layout_marginTop="42dp"
-        android:layout_below="@+id/txt_start_date"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-    <EditText
         android:id="@+id/receiver_mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -78,26 +64,11 @@
         android:gravity="center_horizontal"
         android:imeOptions="actionDone"
         android:focusable="true"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/end_date_button"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:textColor="#ffffffff"
         android:textColorHint="#ffffffff"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/end_date_button"
-        android:background="@android:color/transparent"
-        android:textColor="#ffffffff"
-        android:layout_alignBottom="@+id/txt_end_date"
-        android:layout_centerHorizontal="true"
-        android:layout_alignRight="@+id/txt_end_date"
-        android:layout_alignLeft="@+id/txt_end_date"/>
+        android:layout_marginBottom="48dp"
+        android:layout_above="@+id/button"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:layout_width="match_parent"
@@ -112,31 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="From:"
-        android:id="@+id/fromText"
-        android:layout_above="@+id/start_date_button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingBottom="10dp"
-        android:textColor="#ffffffff"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="To:"
-        android:id="@+id/textView"
-        android:paddingBottom="10dp"
-        android:textColor="#ffffffff"
-        android:layout_above="@+id/end_date_button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Select dates and click send report to generate and send your file"
+        android:text="Select date and click send report to generate and send your file"
         android:id="@+id/textView2"
         android:textColor="#ffffffff"
         android:layout_alignParentTop="true"
