--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:text="Send report"
-        android:id="@+id/button"
+        android:id="@+id/send_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/button1"/>
