Changed background to a drawable resource gradientbackground.xml to reduce the load time and resources needed.

--- a/app/src/main/res/drawable/gradientbackground.xml
+++ b/app/src/main/res/drawable/gradientbackground.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <gradient
-        android:startColor="#FF00DD"
-        android:endColor="#00000000"
-        android:angle="45"/>
+        android:startColor="#CFF09E"
+        android:endColor="#A8DB8A"
+        android:angle="90"/>
 </shape>
