--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -3,6 +3,7 @@
        android:shape="rectangle">
     <gradient
         android:startColor="#CFF09E"
-        android:endColor="#A8DB8A"
-        android:angle="90"/>
+        android:endColor="#79bd9a"
+        android:gradientRadius="800"
+        android:type="radial"/>
 </shape>
