--- a/app/src/main/res/drawable/gradientbackground.xml
+++ b/app/src/main/res/drawable/gradientbackground.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <gradient
-        android:startColor="#FF00DD"
-        android:endColor="#00000000"
-        android:angle="45"/>
+        android:startColor="#cff09e"
+        android:endColor="#a8dba8"
+        android:gradientRadius="800"
+        android:type="radial"/>
 </shape>
