--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:text="Share reportt"
+        android:text="Share report"
         android:id="@+id/send_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
